syntax = "proto3";

package io.github.unknowntpo.server;

option java_multiple_files = true;
option java_package = "io.github.unknowntpo.nanokafka.server.grpc";
option java_outer_classname = "KafkaProto";

// Kafka broker service
service KafkaBrokerService {
  // Producer sends a record to a topic
  rpc Produce(ProduceRequest) returns (ProduceResponse);
}

// Request to produce a record
message ProduceRequest {
  string topic_name = 1;
  Record record = 2;
}

// Response from producing a record
message ProduceResponse {
  bool success = 1;
  string message = 2;
}

// Record representation
message Record {
  string key = 1;
  string value = 2;
  int64 timestamp = 3;
}